# CodingTutorials

./: .gitignore  .gitmodules  LICENSE  README.md
MCGD/: .gitignore  README.md
MCGD/GameDev/: .gitignore  CMakeLists.txt
MCGD/GameDev/BookEngine/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  AudioManager.cpp  AudioManager.hpp  BookEngine.cpp  BookEngine.hpp  CMakeLists.txt  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Exception.hpp  GLTexture.hpp  GameObject.cpp  GameObject.hpp  IGUI.cpp  IGUI.hpp  IGUIButton.cpp  IGUIButton.hpp  IGUILabel.cpp  IGUILabel.hpp  IGUIObject.hpp  IGUIPanel.cpp  IGUIPanel.hpp  IGame.cpp  IGame.hpp  IGameObject.hpp  IOManager.cpp  IOManager.hpp  IScreen.hpp  IState.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  (+35 more)
MCGD/GameDev/Example/: App.cpp  App.hpp  GamePlayScreen.cpp  Main.cpp
MCGD/GameDev/HelloWorld/: App.cpp  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.hpp
MCGD/GameDev/SoundExample/: App.cpp  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.hpp
MCGD/GameDev/TextureExample/: App.cpp  CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.hpp  Main.cpp
MCGD/LibraryTutorial/: main.cpp
MCGD/chapter02/: hello.cpp
MCGD/chapter03/BookEngine/: CMakeLists.txt  IScreen.hpp  window.cpp  window.hpp
MCGD/chapter03/Example/: CMakeLists.txt  GamePlayScreen.cpp  GamePlayScreen.hpp
